feat(assessment): add berita terkait di response
